# TTS-anywhere

./: .fallowrc.json  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  desgin.html  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  playwright.core.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts  windows_bridge_client.py  windows_bridge_server.py
experiments/preproc-electron/python-server/: README.md  pyproject.toml  run_server_win.bat
experiments/preproc-electron/python-server/src/preproc_server/: __init__.py  app.py  cli.py
services/text_processing/h2ovl/: .gitignore  README.md  launcher.py  pyproject.toml  stack.service.json
services/text_processing/h2ovl/scripts/: host.bat
services/text_processing/h2ovl/src/h2ovl_text_processing/: __init__.py  app.py  cli.py  torchvision_patch.py
services/text_processing/h2ovl/tests/: test_api.py  test_cli.py  test_launcher.py  test_scripts.py
services/text_processing/katib/: .gitignore  README.md  basic_usage_test.py  benchmark_ocr.py  launcher.py  pyproject.toml  stack.service.json
services/text_processing/katib/src/katib_text_processing/: __init__.py  app.py  cli.py
services/text_processing/katib/tests/: test_api.py
services/text_processing/moss/: .gitignore  README.md  basic_usage_test.py  launcher.py  pyproject.toml  stack.service.json
services/text_processing/moss/src/moss_text_processing/: __init__.py  app.py  cli.py
services/text_processing/openai_mitm/: README.md  pyproject.toml  run_server_win.bat
services/text_processing/openai_mitm/src/openai_mitm_proxy/: __init__.py  app.py  cli.py
services/text_processing/paddle/: .gitignore  README.md  launcher.py  pyproject.toml  run_server_win.bat  smoke_test.py  stack.service.json
services/text_processing/paddle/scripts/: _serve.bat  host_both.bat  host_both_cpu_ocr_gpu.bat  host_both_gpu.bat  host_both_gpu_ocr_cpu.bat  host_detect.bat  host_detect_cpu_ocr_gpu.bat  host_detect_gpu.bat  host_detect_gpu_ocr_cpu.bat  host_ocr.bat  host_ocr_gpu.bat
services/text_processing/paddle/src/paddle_text_processing/: __init__.py  app.py  cli.py
services/text_processing/paddle/tests/: conftest.py  test_api.py  test_cli.py  test_launcher.py  test_scripts.py
services/text_processing/rapid/: .gitignore  README.md  launcher.py  pyproject.toml  run_server_win.bat  stack.service.json
services/text_processing/rapid/scripts/: _serve.bat  host_both.bat  host_both_cpu_ocr_gpu.bat  host_both_gpu.bat  host_both_gpu_ocr_cpu.bat  host_detect.bat  host_detect_cpu_ocr_gpu.bat  host_detect_gpu.bat  host_detect_gpu_ocr_cpu.bat  host_ocr.bat  host_ocr_gpu.bat
services/text_processing/rapid/src/rapid_text_processing/: __init__.py  app.py  cli.py
services/text_processing/rapid/tests/: test_api.py  test_cli.py  test_launcher.py  test_scripts.py
services/text_processing/windows_ocr/: .gitignore  README.md  launcher.py  pyproject.toml  stack.service.json
services/text_processing/windows_ocr/scripts/: host.bat
services/text_processing/windows_ocr/src/windows_ocr_text_processing/: app.py  cli.py
services/text_processing/windows_ocr/tests/: test_api.py  test_cli.py  test_launcher.py  test_scripts.py
services/tts-adapter/: README.md  pyproject.toml
services/tts-adapter/.mypy_cache/3.11/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _lsprof.data.json  _lsprof.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  (+134 more)
services/tts-adapter/.mypy_cache/3.11/Cython/: Shadow.data.json  Shadow.meta.json
services/tts-adapter/.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
services/tts-adapter/.mypy_cache/3.11/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  base_futures.data.json  base_futures.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  (+27 more)
services/tts-adapter/src/tts_adapter/: cli.py  config.py  main.py  security.py
services/tts-adapter/tests/: test_auth.py  test_cli_smoke.py  test_models_endpoint.py  test_schemas.py
services/tts-edge/: README.md  pyproject.toml
services/tts-edge/scripts/: host.ps1
services/tts-edge/src/tts_edge_adapter/: app.py  cli.py
services/tts/kitten/: README.md  pyproject.toml  stack.service.json
services/tts/kitten/scripts/: client.bat  host.bat
services/tts/kitten/tests/: test_api.py  test_cli.py
services/tts/kokoro/: README.md  pyproject.toml  stack.service.json
services/tts/kokoro/scripts/: client.bat  host.bat
services/tts/kokoro/tests/: test_cli.py
services/tts/piper/: .gitignore  README.md  pyproject.toml  stack.service.json
services/tts/piper/scripts/: client.bat  client.ps1  host.bat  host.ps1
services/tts/piper/tests/: test_cli.py
services/tts/supertonic/: README.md  basic_usage_test.py  launcher.py  pyproject.toml  stack.service.json
services/tts/supertonic/tests/: test_api.py
services/tts/windows_natural/: .gitignore  README.md  launcher.py  pyproject.toml  stack.service.json
services/tts/windows_natural/scripts/: benchmark.py  direct_speak_probe.ps1  host.bat  watch_narrator.ps1
services/tts/windows_natural/tests/: test_api.py  test_helper_manager.py  test_launcher.py
(+700 files in other folders)
