[project]
name = "tts-edge-adapter"
version = "0.1.0"
description = "OpenAI-compatible adapter for Microsoft Edge TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "edge-tts>=6.1.12"
]

[project.scripts]
tts-edge = "tts_edge_adapter.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
