[project]
name = "katib-text-processing"
version = "0.1.0"
description = "GPU-only OpenAI-compatible OCR adapter for Katib Arabic OCR"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pillow>=11.0.0",
  "huggingface_hub>=1.17.0",
  "sentencepiece>=0.2.0",
  "safetensors>=0.6.0",
]

[project.scripts]
katib-text-processing = "katib_text_processing.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]
