[project]
name = "moss-text-processing"
version = "0.1.0"
description = "GPU-only OpenAI-compatible OCR adapter for Hiro-MOSS-OCR"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pillow>=11.0.0",
  "huggingface_hub[hf-xet]==0.36.2",
  "safetensors>=0.6.0",
  "sentencepiece>=0.2.0",
  "opencv-python-headless>=4.13.0",
]

[project.scripts]
moss-text-processing = "moss_text_processing.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]
