[project]
name = "rapid-text-processing"
version = "0.1.0"
description = "RapidOCR detect-only server for preprocessing workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.0",
  "numpy>=2.2.0",
  "Pillow>=11.3.0",
  "rapidocr-onnxruntime>=1.4.4"
]

[project.scripts]
rapid-text-processing = "rapid_text_processing.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
