[project]
name = "tts-piper-adapter"
version = "0.1.0"
description = "OpenAI-compatible adapter for Piper binary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "huggingface_hub>=0.34.0"
]

[project.scripts]
tts-piper = "tts_piper_adapter.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
