[project]
name = "tts-supertonic-adapter"
version = "0.1.0"
description = "OpenAI-compatible adapter for Supertone Supertonic TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "numpy>=2.0.0",
  "soundfile>=0.13.1",
  "supertonic>=1.3.1",
  "huggingface-hub>=0.36.0",
]

[project.scripts]
tts-supertonic = "tts_supertonic_adapter.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]
