[project]
name = "tts-windows-natural-adapter"
version = "0.1.0"
description = "OpenAI-compatible adapter for local Windows Narrator natural voices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1"
]

[project.scripts]
tts-windows-natural = "tts_windows_natural_adapter.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]
